--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.25.0",
+    "react-tilt": "^1.0.2",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.4"
   },
